--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,21 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
-  - name: Projects
-    url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publications'
+    weight: 30
+  - name: Presentations
+    url: '#presentations'
+    weight: 40
+  - name: Outreach
+    url: '#volunteer-outreach'
     weight: 50
-  - name: Contact
-    url: '#contact'
+  - name: In the press
+    url: '#press-and-reporting'
     weight: 60
+  - name: CV
+    url: 'uploads/wbalmer_cv.pdf'
+    weight: 90
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
