updated cv and text

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,6 +7,9 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Research
+    url: '#research'
+    weight: 20
   - name: Publications
     url: '#publications'
     weight: 30
