--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,33 +1,30 @@
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
-#     desired widget in your `content/home/` folder.
-#   The weight parameter defines the order that the links will appear in.
+  #     desired widget in your `content/home/` folder.
+  #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
-    url: '#about'
+  - name: Summary
+    url: /#section-my-resume-biography-3
     weight: 10
-  - name: Research
-    url: '#research'
-    weight: 20
+  - name: Research Highlights
+    url: /#research-highlights-title
+    weight: 12
+  - name: Awards & Observing Programs
+    url: /#section-awards-and-observing
+    weight: 13
   - name: Publications
-    url: '#publications'
-    weight: 30
+    url: /#publications
+    weight: 20
   - name: Outreach
-    url: '#volunteer-outreach'
+    url: /#volunteer-outreach
     weight: 50
   - name: Press
-    url: '#press'
+    url: /#press
     weight: 60
   - name: Journalism
-    url: '#reporting'
+    url: /#reporting
     weight: 70
   - name: CV
-    url: 'uploads/wbalmer_cv.pdf'
+    url: uploads/wbalmer_cv.pdf
     weight: 90
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
