--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,51 +4,43 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # Appearance
-
 appearance:
-  theme_day: ocean
-  theme_night: ocean
-  font: ocean
-  font_size: L
+  mode: light
+  color: blue
 
 # SEO
-
 marketing:
   seo:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: ''
-    twitter: ''
+    description: 'William O. Balmer Will Astronomer Astrophysicist'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
-    google_tag_manager: ''
-    microsoft_clarity: ''
+    plausible: ''
+    fathom: ''
+    pirsch: ''
   verification:
     google: ''
     baidu: ''
 
 # Site header
-
 header:
   navbar:
     enable: true
-    align: l
-    logo:
-      # Logo filename in `assets/media/` folder
-      filename: "icon.png"
-    show_logo: true
-    show_language: false
-    show_day_night: true
+    blox: "navbar"
+    fixed_to_top: true
     show_search: false
-    highlight_active_link: true
+    show_theme_chooser: false
+    logo:
+      text: "W. O. Balmer"
+      filename: "icon.png"
 
 # Site footer
-
 footer:
   copyright:
-    notice: '© {year} W. Balmer. This work is licensed under {license}'
+    notice: '© {year} W. Balmer. Licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
@@ -56,64 +48,13 @@ footer:
       allow_commercial: false
 
 # Localization
-
 locale:
   date_format: 'Jan 2, 2006'
   time_format: '3:04 PM'
-  address_format: en-us
 
 # Site features
-
 features:
-  syntax_highlighter:
-    theme_light: github-light
-    theme_dark: dracula
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
-  repository:
-    url: 'https://github.com/<username>/<repository>'
-    content_dir: content
-    branch: main
-  avatar:
-    gravatar: false
-    shape: circle
-  comment:
-    provider: ''
-    disqus:
-      shortname: ''
-      show_count: true
-    commento:
-      url: ''
-    giscus:
-      repo: ''
-      repo_id: ''
-      category: ''
-      category_id: ''
-  search:
-    provider: wowchemy
-    algolia:
-      app_id: ''
-      api_key: ''
-      index_name: ''
-      show_logo: false
-  map:
-    provider: 'mapnik'
-    api_key: ''
-    zoom: 15
-
-# Extensions
-
-extensions:
-  cms:
-    branch: main
-    local_backend: false
-  academicons:
-    enable: true
-
-# Security
-
-security:
-  # Allow frame for embedding speaker notes in slides
-  allow_frame: true
